Add data loader

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
       name: flake8
       description: wemake-python-styleguide enforcement
       entry: flake8
-      # args: ["--config=setup.cfg"]
+      args: ["--config=setup.cfg"]
       language: python
       types: [python]
       additional_dependencies: [wemake-python-styleguide>=0.17.0]
