--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ flake8 = "^7.2.0"
 mypy = "^1.16.1"
 isort = "^6.0.1"
 black = "^25.1.0"
+lightning = "^2.5.1.post0"
+albumentations = "^2.0.8"
+torchvision = "^0.22.1"
+clearml = "^2.0.0"
 
 
 [build-system]
