--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ lightning = "^2.5.1.post0"
 albumentations = "^2.0.8"
 torchvision = "^0.22.1"
 clearml = "^2.0.0"
+notebook = "^7.4.3"
+timm = "^1.0.15"
 
 
 [build-system]
