--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ max-line-length = 120
 # Exclude some checks globally:
 ignore =
     D100, D101, D102, D103, D105, D107, D104, D401, WPS305, WPS458, WPS301, E203, W503, WPS236, DAR101
+    WPS214
 
     # Allow %s string formatting in logs
     WPS323
@@ -53,7 +54,7 @@ enable_error_code = truthy-bool, redundant-expr
 
 allow_redefinition = false
 check_untyped_defs = true
-disallow_any_explicit = true
+disallow_any_explicit = false
 disallow_any_generics = true
 disallow_untyped_calls = true
 disallow_untyped_decorators = false
