--- a/configs/train_config.yaml
+++ b/configs/train_config.yaml
@@ -1,2 +1,38 @@
-project_name: pytorch-lightning
-experiment_name: image_classification
+project_name: "pytorch-lightning"
+experiment_name: "image_classification"
+track_clearml: true
+
+trainer_config:
+  min_epochs: 2
+  max_epochs: 5
+  val_every_n_epochs: 3
+  log_every_n_epochs: 5
+  deterministic: false
+  task: "multiclass"
+  average: "macro"
+  start_factor: 1.0
+  end_factor: 0.01
+  seed: 0
+
+data_config:
+  dataset_name: "ImageClassification"
+  dataset_cache: true
+  img_size:
+    - 224
+    - 224
+  batch_size: 32
+  train_split: 0.8
+  num_workers: 2
+  pin_memory: true
+  hue_shift_limit: 20
+  sat_shift_limit: 30
+  val_shift_limit: 20
+  brightness_limit: 0.2
+  contrast_limit: 0.2
+
+module_config:
+  model_name: "mobilenetv3_small_050"
+  pretrained: true
+  model_kwargs:
+    drop_rate: 0.2
+  lr: 0.0005
